# plc-workflows-mpc

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMMISSIONING.md  STATUS.md
plc/templates/: LADDER_DESCRIPTION.md  MPC_Supervisor.st  README.md  TAGS.csv
scripts/: forge_smoke.py
specs/: plc-workflows-mpc.facts.json
src/plc_workflows_mpc/: __init__.py  adapter.py  config.py  context.py  manifest.json  record_builder.py
src/plc_workflows_mpc/apc/: __init__.py
src/plc_workflows_mpc/apc/identification/: __init__.py  base.py  fit.py  models.py  step_detection.py
src/plc_workflows_mpc/apc/mpc/: __init__.py  base.py  controller.py  realization.py
src/plc_workflows_mpc/apc/selection/: __init__.py
src/plc_workflows_mpc/optimization/: __init__.py  base.py  coordinator.py  scipy_backend.py
src/plc_workflows_mpc/plc_io/: __init__.py  base.py  logix.py
src/plc_workflows_mpc/sdlc/: __init__.py  __main__.py  base.py  cli.py  conversion.py  pipelines.py
src/plc_workflows_mpc/supervisor/: __init__.py  base.py  health.py  service.py
tests/: conftest.py  fakes.py  test_adapter.py  test_adapter_live.py  test_config.py  test_context.py  test_forge_error_paths.py  test_forge_lifecycle.py  test_forge_live_grpc.py  test_forge_live_mode.py  test_forge_serialization.py  test_identification.py  test_l5x_conversion.py  test_link_health.py  test_manifest_spec.py  test_mpc_controller.py  test_optimization.py  test_packages.py  test_pipelines.py  test_plant_coordinator.py  test_plant_realization.py  test_plc_templates.py  test_record_builder.py  test_sdlc_cli.py  test_selection.py  test_supervisor.py
tests/harness/: __init__.py  hub.py
